force-app/main/default/objects/BMCServiceDesk__LookupFilterCriteria__c/BMCServiceDesk__LookupFilterCriteria__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for lookup filter criteria conditions.</description>
    <label>Lookup Filter Criteria</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Lookup Filter Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Filter Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>