force-app/main/default/objects/BMCServiceDesk__LookupFilterCriteria__c/fields/BMCServiceDesk__FieldName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FieldName__c</fullName>
    <description>This field stores the API name of the field on which the lookup filter criteria is defined.</description>
    <inlineHelpText>Enter the value to define the lookup filter criteria.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>