force-app/main/default/objects/BMCServiceDesk__LookupFilterCriteria__c/fields/BMCServiceDesk__IsValueField__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsValueField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Value Field</label>
    <type>Checkbox</type>
</CustomField>