force-app/main/default/objects/BMCServiceDesk__LookupFilterCriteria__c/fields/BMCServiceDesk__Value__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Value__c</fullName>
    <description>This field stores the value of filter criteria condition.</description>
    <inlineHelpText>From the list of options, select the value for the filter criteria condition.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>